# crprintf

./: README.md  maidfile.toml  meson.build  meson_options.txt
examples/: basic.c  stateful.c
src/: crprintf.c  crprintf.h
tests/: test.c
